# kitchensink

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  factorial_exec  factorial_gtest.cpp  hello.cpp  hello_exec
